# Moneta

./: .gitignore  .hermes-rules  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: windows-installer.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App 2.tsx  App.css  App.test.tsx  App.tsx  invoice-pdf.test.ts  invoice-pdf.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: CompactSummaryGrid.tsx  DataTable.test.tsx  DataTable.tsx  DataTableHeader.tsx  EmptyState.test.tsx  EmptyState.tsx  FormActions.test.tsx  FormActions.tsx  InlineActionGroup.test.tsx  (+24 more)
docs/superpowers/plans/: 2026-06-27-moneta-foundation.md  2026-06-27-product-price-format-and-unit-stock.md  2026-06-27-products-inventory-basic.md  2026-06-27-sales-paid-or-pending.md  2026-06-30-purchases-payables.md  2026-06-30-sales-invoice-pdf.md  2026-07-01-cartera-dashboard.md  2026-07-01-sales-margin-reports.md  2026-07-02-customer-management.md
docs/superpowers/specs/: 2026-06-27-moneta-desktop-design.md  2026-06-27-product-price-format-and-unit-stock-design.md  2026-06-27-products-inventory-basic-design.md  2026-06-27-sales-paid-or-pending-design.md  2026-06-30-purchase-inline-product-design.md  2026-06-30-purchases-payables-design.md  2026-06-30-sales-invoice-pdf-design.md  2026-07-01-cartera-dashboard-design.md  2026-07-01-sales-margin-reports-design.md  2026-07-02-customer-management-design.md
(+19 files in other folders)
