[package]
name = "moneta-desktop"
version = "0.1.0"
description = "Moneta desktop inventory and receivables app"
authors = ["Moneta"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
